codespeak-lib (0.9.0-5) unstable; urgency=low

  * Remove python-tkinter from Recommends (Closes: #448894)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 22 Feb 2008 00:07:33 +0000

codespeak-lib (0.9.0-4) unstable; urgency=low

  * Add myself to Uploaders:
  * Use Homepage: field in debian/control.
  * Bump Standards-Version to 3.7.3.
  * Add openssh-client to Build-depends. (Closes: #419969)
  * Re-add missing documentation (broken by NMU) and rework how
    documentation is generated. (Closes: #441698)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 04 Feb 2008 16:15:21 +0000

codespeak-lib (0.9.0-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Disable apigen invocation. (closes: #439953)

 -- Bastian Blank <waldi@debian.org>  Sat, 08 Sep 2007 19:40:36 +0200

codespeak-lib (0.9.0-3) unstable; urgency=low

  * Added missing build dependencies on subversion and ssh
  * Patched code depending on the presence of .svn directories in apigen

 -- Alexandre Fayolle <afayolle@debian.org>  Wed, 21 Feb 2007 10:04:13 +0100

codespeak-lib (0.9.0-2) unstable; urgency=low

  * Added patch to allow the apigen documentation to build even if the
    platform does not support greenlets

 -- Alexandre Fayolle <afayolle@debian.org>  Tue, 20 Feb 2007 14:21:08 +0100

codespeak-lib (0.9.0-1) unstable; urgency=low

  * Added myself to the list of uploaders, with Guilherme's assent
  * New upstream release (closes: #411058)
  * Fixed greenlet build (closes: #355143)
  * removed deprecated script rst2pdf (closes: #399839), use py.rest instead.
  * Updated build dependencies and binary dependencies
  * Wrote an stdlib distutils based setup.py to install the modules
  * Build HTML documentation
  * Added man pages for py.rest, py.test, py.cleanup, py.lookup and py.countloc
  * Acknowledge Matthias Klose's NMU (closes: #361203)

 -- Alexandre Fayolle <afayolle@debian.org>  Thu, 15 Feb 2007 09:54:51 +0100

codespeak-lib (0.7-svn20060621-1) unstable; urgency=low
