@@ -1,6 +1,8 @@
 codespeak-lib (0.9.0-5) unstable; urgency=low
 
   * Remove python-tkinter from Recommends (Closes: #448894)
+  * Install "webdata" HTML and JavaScript files to fix web-based py.test.
+    Patch by Alexandre Fayolle <afayolle@debian.org> (Closes: #434226).
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 22 Feb 2008 00:07:33 +0000
 
